compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/functionAndProperty/topLevel.kt
// COMPARE_WITH_LIGHT_TREE

<!CONFLICTING_JVM_DECLARATIONS!>val x<!> = 1
<!CONFLICTING_JVM_DECLARATIONS!>fun getX()<!> = 1
